kanc/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_case_params/expected_2_actually_1.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

type Eq(T: Type, a: T, b: T) {
    .refl(T: Type, t: T): Eq(T, t, t),
}

let foo = match Eq.refl(Nat, Nat.o) {
    .refl(o) => o,
};
